<resources>
    <string name="app_name">My Book Diary</string>
    <string name="add_book">Add Book</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_pages">Pages</string>
    <string name="book_cover">Cover (URL)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_title">Delete all data?</string>
    <string name="confirm_delete_msg">Are you sure you want to delete all data? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select a language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="all_data_deleted">All data has been deleted.</string>
    <string name="delete_all_data">Delete all Data</string>
    <string name="unknown_author">Unknown</string>
    <string name="book_updated">Book Updated</string>
    <string name="confirm_delete_book_title">Delete book?</string>
    <string name="confirm_delete_book_msg">Are you sure you want to delete this book? This action cannot be undone.</string>
    <string name="book_deleted">Book Deleted</string>
    <string name="book_added">Book Added</string>
    <string name="book_title_mandatory">Book Title is mandatory</string>

    <!-- Definición del array book_status -->
    <array name="book_status">
        <item>Read</item>        <!-- Leído -->
        <item>Reading</item>     <!-- Leyendo -->
        <item>TBR</item>         <!-- Por Leer -->
        <item>DNF</item>         <!-- No terminado -->
    </array>

    <string name="select_cover_image">Select a cover image</string>
    <string name="paste_cover_URL">Paste cover URL</string>
    <string name="choose_from_device">Choose from Device</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="save_session">Save Session</string>
    <string name="add_reading_session">Add Reading Session</string>
    <string name="edit_book">Edit Book</string>
    <string name="no_sessions">No session added</string>
    <string name="edit_reading_session">Edit Reading Session</string>
</resources>
