<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/detailCover"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/default_book_cover"/>

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:text="@string/book_title"/>

    <TextView
        android:id="@+id/detailAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/book_author"/>

    <TextView
        android:id="@+id/detailPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/book_pages"/>

    <TextView
        android:id="@+id/detailIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="ISBN: 123-456-789"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/editBookButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/edit_book" />

        <Button
            android:id="@+id/addReadingSessionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/add_reading_session" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sessionsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

</LinearLayout>
