<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Spinner para el estado -->
    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/startDatePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/endDatePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"
            android:inputType="date" />
    </LinearLayout>


    <!-- RatingBar para la calificación -->
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:isIndicator="false"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:inputType="textMultiLine" />

    <!-- Botón para guardar la sesión -->
    <Button
        android:id="@+id/saveSessionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_session" />
</LinearLayout>
